# esdefavs

./: CHANGELOG.md  EmuDeck Favorites Sync.desktop  EmuDeck Favorites Sync.sh  LICENSE  README.md  esde-closed.sh  install.sh  pyproject.toml  run.sh  sync-now.sh  sync-off.sh  sync-on.sh  sync-status.sh  uninstall.sh  update.sh
.github/workflows/: tests.yml
docs/: design-brief.md
emudeck_favorites_sync/: __init__.py  autosync.py  cli.py  compatibility.py  config.py  models.py  planner.py  scanner.py  srm_apply.py  srm_cli.py  srm_preview.py  state.py  steam_shortcuts.py
tests/: test_core.py
tests/fixtures/ES-DE/: es_settings.xml
tests/fixtures/ES-DE/gamelists/ps2/: gamelist.xml
